--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -3,6 +3,7 @@
   opacity: 0.8;
   width: 100vw;
   margin-top: 30px;
+  margin-bottom: 10px;
   background-size: 12px 12px;
   z-index: 2;
   top: 0;
@@ -15,8 +16,8 @@
 .option {
   overflow-x: hidden;
   overflow-y: hidden;
-  background: linear-gradient(to right, transparent 2%, black 80%);
-  height: 6vh;
+  background: black;
+  height: 10vh;
   border: 5px;
   border-radius: 0px;
   display: flex;
