--- a/src/style/Skills.css
+++ b/src/style/Skills.css
@@ -6,9 +6,9 @@
 .skills-section-title {
     margin-right: auto;
     margin-left: auto;
+    margin-top: 40px;
     color: color-mix(in srgb, rgba(255, 255, 0, 1) 50%, rgba(0, 255, 255, 1) 50%);
     font-family: unbounded;
-    font-family: "Poppins";
     font-size: 30px;
     font-weight: 700px;
     transition: all 0.20s linear;
@@ -18,8 +18,8 @@
 }
 
 .skills-section {
-    height: 40vh;
-    padding: 5vw;
+    height: 100vh;
+    margin: 0vw 5vw 15vw 5vw;
 }
 
 .language, .frontend, .backend, .database {
@@ -33,7 +33,7 @@
     transparent 1px,
     transparent 10px
   );
-    margin : 0px 0px 50px 0px;
+    margin : 0px 0px 30px 0px;
     /* border : 1px solid red; */
 }
 .language-title, .frontend-title, .backend-title, .database-title {
@@ -58,7 +58,7 @@
 }
 
 .skills-learned {
-    background: black;
+    background-color: black;
     border : 1px solid white;
     width: 200px;
     margin: 20px;
@@ -86,6 +86,10 @@
     padding: 0px 5px;
     color: white;
     transition: all 0.25s linear;
+}
+
+.database {
+    margin-bottom: 40px;
 }
 @media only screen and (max-width: 850px)
 {
